# microretailX

./: .gitignore  CNAME  cookies.html  index.html  index2.html  legal.html  privacy.html  terms.html
haskell-site/: README.md  cabal.project  microretailx-hs.cabal
haskell-site/app/: Main.hs
haskell-site/src/MicroRetailX/: App.hs  Config.hs  Routes.hs
haskell-site/static/: cookies.html  legal.html  privacy.html  terms.html
