cabal-version:      3.0
name:               microretailx-hs
version:            0.1.0.0
build-type:         Simple

executable microretailx-hs
  main-is:             Main.hs
  hs-source-dirs:      app, src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.14 && <5
    , http-types
    , scotty >= 0.22
    , wai-middleware-static
    , wai-extra
    , text
